# Spectre

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
data/: copyright.txt
data/materials/: spectre.smat
source/: conf.cpp  conf.hpp  main.cpp
source/core/: SC_Material.cpp  SC_Material.hpp
source/engine/: SE_Scene.cpp  SE_Scene.hpp
source/logging/: Console.cpp  Console.hpp  Errors.hpp  console.hpp
source/matGen/: main.cpp
source/utils/: SIndexedList.hpp  SOpenFile.hpp  STypes.hpp
source/vulkan/: SVMesh.cpp  SVMesh.hpp  SVMesh2D.cpp  SVMesh2D.hpp  SVMesh3D.cpp  SVMesh3D.hpp  SVPipeline.cpp  SVPipeline.hpp  SVRenderer.cpp  SVRenderer.hpp  SVRenderer2D.cpp  SVRenderer2D.hpp  SVRenderer3D.cpp  SVRenderer3D.hpp  SVSwapchain.cpp  SVSwapchain.hpp  SVTexture.cpp  SVTexture.hpp  SVUtils.cpp  SVUtils.hpp  SVWidget.cpp  SVWidget.hpp
source/vulkan/shaders/: defaultVertexShader2D.vert  defaultVertexShader2D.vert.spv  defaultVertexShader3D.vert  defaultVertexShader3D.vert.spv  emptyShader.frag  emptyShader.vert  simpleShader.frag  simpleShader.frag.spv  simpleShader.vert
source/window/: SWSButton.cpp  SWSButton.hpp  SWSColors.hpp  SWSContainer.cpp  SWSContainer.hpp  SWSDrawable.cpp  SWSDrawable.hpp  SWSFlags.hpp  SWSLabel.cpp  SWSLabel.hpp  SWSRenderButton.cpp  SWSRenderButton.hpp  SWSRenderWindow.cpp  SWSRenderWindow.hpp  SWSWidget.cpp  SWSWidget.hpp  SWSWindow.cpp  SWSWindow.hpp  SWidget.cpp  SWidget.hpp
